# cuSVMWrapper

./: .gitignore  LIBSVM  README.md  TEST
cuSVM/: CMakeLists.txt  Makefile  Makefile.old
cuSVM/cuSVMPredict/: cuSVMPredict.cpp  cuSVMPredictKernel.cu  svm.cpp  svm.h
cuSVM/cuSVMTrain/: TrainModule.def  cuSVMSolver.cu  cuSVMSolver.cu.org  cuSVMSolver.cu.pimped  cuSVMTrain.cpp  svm-train.c  svm-train.c.bak  svm.cpp  svm.h
cuSVM/include/: cuSVMutil.h
